--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,39 +1,19 @@
-name: create-catonaut CI/CD
+name: Publish-create-catonaut
 
 on:
   push:
     branches:
-      - '*'
-  pull_request:
-    paths:
-      - '.github/workflows/**'
-      - '**.yml'
-      - '**.json'
+      - master
   workflow_run:
-    workflows: ['dependabot']
+    workflows:
+      - Test create-catonaut
     types:
       - completed
+
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'latest'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Tests
-        run: npm run test
   publish:
     runs-on: ubuntu-latest
-    needs: build-and-test
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -41,12 +21,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
+          node-version: latest
 
       - name: Publish to npm
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: '${{secrets.NPM_TOKEN}}'
 
   additional-test:
     runs-on: ubuntu-latest
@@ -59,7 +39,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
+          node-version: latest
 
       - name: Making sure our published package actually works
         run: npx create-catonaut testApp
