--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "create-catonaut": "./src/index.js"
   },
   "scripts": {
-    "test": "",
+    "test": "mochi",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}' '!dist/**' '!node_modules/**'"
   },
   "license": "MIT",
