--- a/.github/workflows/create-catonaut test.yml
+++ b/.github/workflows/create-catonaut test.yml
@@ -1,6 +1,18 @@
 name: Test-create-catonaut
 
-on: push
+on:
+  push:
+    branches:
+      - '**'
+
+  pull_request:
+    branches:
+      - 'master'
+
+  workflow_run:
+    workflows: ['dependabot']
+    types:
+      - completed
 
 jobs:
   build-and-test:
