--- a/.github/workflows/create-catonaut test.yml
+++ b/.github/workflows/create-catonaut test.yml
@@ -6,8 +6,7 @@ on:
       - '**'
 
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
   workflow_run:
     workflows: ['dependabot']
