--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,10 @@
 name: Publish-create-catonaut
 
 on:
-  push:
-    branches:
-      - master
-
   workflow_run:
     workflows:
-      - Test create-catonaut
+      - Test-create-catonaut
+    branches: [main]
     types:
       - completed
 
