--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,5 +40,12 @@ jobs:
         with:
           node-version: latest
 
+      - name: Install dependencies
+        run: |
+          npm ci
+          npm install -g create-catonaut
+
       - name: Making sure our published package actually works
-        run: npx create-catonaut testApp
+        run: |
+          npx create-catonaut firstTestApp
+          npm create catonaut secondTestApp
