--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-catonaut",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "src/index.js",
   "bin": {
     "create-catonaut": "./src/index.js"
@@ -18,5 +18,10 @@
   },
   "devDependencies": {
     "prettier": "^3.1.1"
-  }
+  },
+  "files": [
+    "src/*",
+    "README.md",
+    "package.json"
+  ]
 }
