changed dependabot target branch

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: 'npm'
     directory: '/'
+    target-branch: 'v*.*.*'
     schedule:
       # Check for updates to GitHub Actions every week
       interval: 'weekly'
