--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.9",
   "main": "src/index.js",
   "bin": {
-    "create-catonaut": "src/index.js"
+    "create-catonaut": "./src/index.js"
   },
   "scripts": {
     "test": "./src/index.js testApp",
