--- a/.github/workflows/create-catonaut-test.yml
+++ b/.github/workflows/create-catonaut-test.yml
@@ -21,13 +21,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: 'latest'
+          bun-version: latest
 
       - name: Install Dependencies
-        run: npm install
+        run: bun install
 
       - name: Run Tests
-        run: npm run test
+        run: bun run test
