--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "create-catonaut": "./src/index.js"
   },
   "scripts": {
-    "test": "./src/index.js testApp",
+    "test": "jest",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,yml}' '**/**/*.{js,jsx,ts,tsx,json,md,yml}' '!dist/**' '!node_modules/**'"
   },
   "license": "MIT",
@@ -18,6 +18,7 @@
     "isomorphic-git": "^1.25.3"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "prettier": "^3.2.2"
   },
   "files": [
