--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.9",
   "main": "src/index.js",
   "bin": {
-    "create-catonaut": "./src/index.js"
+    "create-catonaut": "src/index.js"
   },
   "scripts": {
-    "test": "jest",
+    "test": "./src/index.js testApp",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,yml}' '**/**/*.{js,jsx,ts,tsx,json,md,yml}' '!dist/**' '!node_modules/**'"
   },
   "license": "MIT",
@@ -18,7 +18,6 @@
     "isomorphic-git": "^1.25.3"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
     "prettier": "^3.2.2"
   },
   "files": [
